testsuite/tests/statmemprof/exception_callback.reference
Fatal error: exception File "exception_callback.ml", line 15, characters 40-46: Assertion failed
